--- a/topics.html
+++ b/topics.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>专题 | 心能教育 EduSynergy</title>
-  <meta name="description" content="心能教育 EduSynergy 专题目录：工具卡、情境练习与成长框架。" />
+  <title>专题 | Topics | 心能教育 EduSynergy</title>
+  <meta name="description" content="EduSynergy 专题：SEL × 学习者能量加油站、物理、生物。" />
   <link rel="stylesheet" href="styles.css" />
 </head>
 
@@ -19,12 +19,7 @@
       </a>
 
       <nav class="top-actions">
-        <a class="navlink" href="index.html">
-          <span class="zh">首页</span><span class="en">Home</span>
-        </a>
-        <a class="navlink" href="spring.html">
-          <span class="zh">春节专题</span><span class="en">Spring Festival</span>
-        </a>
+        <a class="navlink" href="topics.html"><span class="zh">专题</span><span class="en">Topics</span></a>
         <button class="chip" id="modeToggle" type="button" aria-label="Bilingual toggle">
           <span class="zh">中英</span><span class="en">BI</span>
         </button>
@@ -34,117 +29,92 @@
 
   <main class="container">
     <section class="hero compact">
-      <div class="hero-card">
-        <h1><span class="zh">专题目录</span><span class="en">Topics</span></h1>
-        <p class="lead">
-          <span class="zh">把内容沉淀成结构：每个专题都是“一页就能用”的工具与练习。</span>
-          <span class="en">Turn content into structure: each topic is a ready-to-use page with tools and practice.</span>
+      <div class="hero-card section-reading">
+        <h1 class="stack">
+          <span class="zh">专题</span>
+          <span class="en">Topics</span>
+        </h1>
+        <p class="lead stack">
+          <span class="zh">三大主线：SEL × 学习者能量加油站、物理、生物。其余内容作为子主题归入 SEL。</span>
+          <span class="en">Three main tracks: SEL × Learner Energy Station, Physics, Biology. Other content lives as SEL subtopics.</span>
         </p>
-        <div class="pill-row">
-          <span class="pill"><span class="zh">可收藏</span><span class="en">Saveable</span></span>
-          <span class="pill"><span class="zh">可转发</span><span class="en">Shareable</span></span>
-          <span class="pill"><span class="zh">可共创</span><span class="en">Co-creatable</span></span>
-        </div>
       </div>
     </section>
 
-    <section class="grid topics">
-      <article class="card topic-card">
-        <div class="topic-meta">
-          <span class="topic-tag"><span class="zh">节日情境</span><span class="en">Holiday</span></span>
-          <span class="topic-tag"><span class="zh">工具卡</span><span class="en">Toolcards</span></span>
-        </div>
-        <h2 class="topic-title">
-          <a href="spring.html">
-            <span class="zh">春节聚餐：祝福话与待人接物</span>
-            <span class="en">Spring Festival Meals: Blessings & Etiquette</span>
-          </a>
-        </h2>
-        <p class="muted">
-          <span class="zh">祝福句式工具、情境应对卡片、亲子对话三问。</span>
-          <span class="en">Blessing template tool, coping cards, and 3 family prompts.</span>
-        </p>
-        <div class="cta-row">
-          <a class="btn primary" href="spring.html">
-            <span class="zh">打开</span><span class="en">Open</span>
-          </a>
-        </div>
-      </article>
+    <section class="card">
+      <div class="grid topics">
+        <!-- SEL -->
+        <article class="card topic-card section-social">
+          <div class="topic-meta">
+            <span class="topic-tag"><span class="zh">主专题</span><span class="en">Main</span></span>
+            <span class="topic-tag"><span class="zh">SEL</span><span class="en">SEL</span></span>
+          </div>
 
-      <article class="card topic-card">
-        <div class="topic-meta">
-          <span class="topic-tag"><span class="zh">共读</span><span class="en">Co-reading</span></span>
-          <span class="topic-tag"><span class="zh">书籍</span><span class="en">Books</span></span>
-        </div>
-        <h2 class="topic-title">
-          <a href="topic-coreading.html">
-            <span class="zh">共读：Barrett《7 and a Half Lessons About the Brain》</span>
-            <span class="en">Co-reading: Barrett’s <i>Seven and a Half Lessons About the Brain</i></span>
-          </a>
-        </h2>
-        <p class="muted">
-          <span class="zh">每期一课：概念卡、讨论问题、生活化练习（中英对照）。</span>
-          <span class="en">One lesson per issue: concept cards, discussion prompts, and everyday practice (bilingual).</span>
-        </p>
-        <div class="cta-row">
-          <a class="btn primary" href="topic-coreading.html"><span class="zh">打开</span><span class="en">Open</span></a>
-        </div>
-      </article>
+          <h2 class="topic-title">
+            <a href="topic-sel.html">
+              <span class="zh">SEL × 学习者能量加油站</span>
+              <span class="en">SEL × Learner Energy Station</span>
+            </a>
+          </h2>
 
-      <article class="card topic-card">
-        <div class="topic-meta">
-          <span class="topic-tag"><span class="zh">物理</span><span class="en">Physics</span></span>
-          <span class="topic-tag"><span class="zh">学习工具</span><span class="en">Learning tools</span></span>
-        </div>
-        <h2 class="topic-title">
-          <a href="topic-physics.html">
-            <span class="zh">物理：用直觉、图像与推导建立理解</span>
-            <span class="en">Physics: Build understanding with intuition, diagrams, and derivations</span>
-          </a>
-        </h2>
-        <p class="muted">
-          <span class="zh">每期一个主题：核心概念、常见误区、题型拆解、英文表达。</span>
-          <span class="en">Each issue: core ideas, misconceptions, problem setups, and English phrasing.</span>
-        </p>
-        <div class="cta-row">
-          <a class="btn primary" href="topic-physics.html"><span class="zh">打开</span><span class="en">Open</span></a>
-        </div>
-      </article>
+          <p class="muted stack">
+            <span class="zh">共读（8篇）＋节日礼仪加餐＋SEL工具箱（持续更新）。</span>
+            <span class="en">Book club (8) + festival add-ons + an evolving SEL toolkit.</span>
+          </p>
 
-      <article class="card topic-card">
-        <div class="topic-meta">
-          <span class="topic-tag"><span class="zh">生物</span><span class="en">Biology</span></span>
-          <span class="topic-tag"><span class="zh">科学素养</span><span class="en">Scientific literacy</span></span>
-        </div>
-        <h2 class="topic-title">
-          <a href="topic-biology.html">
-            <span class="zh">生物：从机制到证据的思维训练</span>
-            <span class="en">Biology: Thinking from mechanism to evidence</span>
-          </a>
-        </h2>
-        <p class="muted">
-          <span class="zh">每期一个大概念：关键词汇、图解、实验思路、写作句型。</span>
-          <span class="en">Each issue: big idea, key vocabulary, diagrams, experimental thinking, and writing frames.</span>
-        </p>
-        <div class="cta-row">
-          <a class="btn primary" href="topic-biology.html"><span class="zh">打开</span><span class="en">Open</span></a>
-        </div>
-      </article>
+          <div class="cta-row">
+            <a class="btn primary" href="topic-sel.html"><span class="zh">进入</span><span class="en">Enter</span></a>
+          </div>
+        </article>
 
-      <article class="card topic-card placeholder">
-        <div class="topic-meta">
-          <span class="topic-tag"><span class="zh">即将上线</span><span class="en">Coming soon</span></span>
-        </div>
-        <h2 class="topic-title">
-          <span class="zh">下一个专题：你想先做什么？</span>
-          <span class="en">Next topic: what should we build first?</span>
-        </h2>
-        <ul class="muted list">
-          <li><span class="zh">大学申请焦虑的SEL工具卡</span><span class="en">SEL toolcards for college-application stress</span></li>
-          <li><span class="zh">理工科优秀却焦虑：自我整合练习</span><span class="en">High-achieving STEM students: self-integration practice</span></li>
-          <li><span class="zh">亲子沟通：提问与倾听脚本</span><span class="en">Family talk: question & listening scripts</span></li>
-        </ul>
-      </article>
+        <!-- Physics -->
+        <article class="card topic-card section-physics">
+          <div class="topic-meta">
+            <span class="topic-tag"><span class="zh">主专题</span><span class="en">Main</span></span>
+            <span class="topic-tag"><span class="zh">物理</span><span class="en">Physics</span></span>
+          </div>
+
+          <h2 class="topic-title">
+            <a href="topic-physics.html">
+              <span class="zh">物理：直觉 × 图像 × 推导</span>
+              <span class="en">Physics: Intuition × Diagrams × Derivations</span>
+            </a>
+          </h2>
+
+          <p class="muted stack">
+            <span class="zh">依照主流初高中大纲组织子主题与多期内容。</span>
+            <span class="en">Subtopics organized around common middle/high school curricula.</span>
+          </p>
+
+          <div class="cta-row">
+            <a class="btn primary" href="topic-physics.html"><span class="zh">进入</span><span class="en">Enter</span></a>
+          </div>
+        </article>
+
+        <!-- Biology -->
+        <article class="card topic-card section-biology">
+          <div class="topic-meta">
+            <span class="topic-tag"><span class="zh">主专题</span><span class="en">Main</span></span>
+            <span class="topic-tag"><span class="zh">生物</span><span class="en">Biology</span></span>
+          </div>
+
+          <h2 class="topic-title">
+            <a href="topic-biology.html">
+              <span class="zh">生物：机制 × 证据 × 表达</span>
+              <span class="en">Biology: Mechanism × Evidence × Expression</span>
+            </a>
+          </h2>
+
+          <p class="muted stack">
+            <span class="zh">依照主流初高中大纲组织子主题与多期内容。</span>
+            <span class="en">Subtopics organized around common middle/high school curricula.</span>
+          </p>
+
+          <div class="cta-row">
+            <a class="btn primary" href="topic-biology.html"><span class="zh">进入</span><span class="en">Enter</span></a>
+          </div>
+        </article>
+      </div>
     </section>
 
     <footer class="footer">
