--- a/index.html
+++ b/index.html
@@ -3,15 +3,21 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>心能教育 | EduSynergy</title>
-  <meta name="description" content="心能教育 EduSynergy：搭建能力、情绪与现实连接的长期成长框架，推动认知与自我整合升级，让学习成为自我形成的过程。" />
+  <title>心能教育 EduSynergy</title>
+  <meta name="description" content="EduSynergy：SEL × 学习者能量加油站。连接情绪、身体与学习。" />
   <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body data-mode="bi">
+
+  <!-- 更新标记（确认你确实在看新页面） -->
+  <div style="position:fixed;top:10px;left:10px;z-index:99999;background:#ffefc2;padding:8px 10px;border-radius:10px;font-weight:700">
+    ✅ INDEX UPDATED
+  </div>
+
   <header class="topbar">
     <div class="container topbar-inner">
-      <a class="brand" href="index.html" aria-label="EduSynergy Home">
+      <a class="brand" href="index.html">
         <span class="brand-mark">心能</span>
         <span class="brand-name">心能教育</span>
         <span class="brand-sep">·</span>
@@ -20,106 +26,120 @@
 
       <nav class="top-actions">
         <a class="navlink" href="topics.html">
-          <span class="zh">专题</span><span class="en">Topics</span>
+          <span class="zh">专题</span>
+          <span class="en">Topics</span>
         </a>
-        <a class="navlink" href="spring.html">
-          <span class="zh">春节专题</span><span class="en">Spring Festival</span>
-        </a>
-        <button class="chip" id="modeToggle" type="button" aria-label="Bilingual toggle">
-          <span class="zh">中英</span><span class="en">BI</span>
+
+        <button class="chip" id="modeToggle">
+          <span class="zh">中英</span>
+          <span class="en">BI</span>
         </button>
       </nav>
     </div>
   </header>
 
   <main class="container">
+
+    <!-- Hero -->
     <section class="hero">
-      <div class="hero-card">
-        <h1>
-          <span class="zh">让能力有温度，让学习成为自我发现</span>
-          <span class="en">Warm skills. Learning as self-discovery.</span>
+      <div class="hero-card section-social">
+        <h1 class="stack">
+          <span class="zh">SEL × 学习者能量加油站</span>
+          <span class="en">SEL × Learner Energy Station</span>
         </h1>
 
-        <p class="lead">
-          <span class="zh">心能教育搭建能力、情绪与现实连接的长期成长框架，推动认知与自我整合升级，让学习成为自我形成的过程。</span>
-          <span class="en">EduSynergy builds a long-term growth framework connecting ability, emotion, and real life—supporting cognitive growth and self-integration, so learning becomes a process of becoming.</span>
+        <p class="lead stack">
+          <span class="zh">
+            把情绪、身体与学习连接起来：从“身体预算”出发，练共同调节、预测与重构，
+            让学习在温暖与力量里持续发生。
+          </span>
+          <span class="en">
+            Connect emotion, body, and learning: start from the body budget,
+            practice co-regulation, prediction, and reframing—so learning can
+            sustainably happen with warmth and strength.
+          </span>
         </p>
+
+        <div class="pill-row">
+          <span class="pill"><span class="zh">身体预算</span><span class="en">Body budget</span></span>
+          <span class="pill"><span class="zh">共同调节</span><span class="en">Co-regulation</span></span>
+          <span class="pill"><span class="zh">预测与重构</span><span class="en">Prediction</span></span>
+        </div>
 
         <div class="cta-row">
-          <a class="btn primary" href="spring.html">
-            <span class="zh">进入春节专题</span><span class="en">Open Spring Festival page</span>
+          <a class="btn primary" href="topic-sel.html">
+            <span class="zh">进入 SEL</span>
+            <span class="en">Enter SEL</span>
           </a>
-          <a class="btn ghost" href="topics.html">
-            <span class="zh">浏览专题</span><span class="en">Browse topics</span>
-          </a>
-        </div>
 
-        <div class="pill-row" aria-label="tags">
-          <span class="pill"><span class="zh">温柔且有结构</span><span class="en">Warm + structured</span></span>
-          <span class="pill"><span class="zh">SEL × 真实情境</span><span class="en">SEL × real-life moments</span></span>
-          <span class="pill"><span class="zh">长期生长</span><span class="en">Built to grow long-term</span></span>
+          <a class="btn" href="topics.html">
+            <span class="zh">所有专题</span>
+            <span class="en">All Topics</span>
+          </a>
         </div>
       </div>
     </section>
 
-    <section class="grid">
-      <article class="card">
-        <h2><span class="zh">学习 × 自我发现</span><span class="en">Learning × Self-Discovery</span></h2>
-        <p>
-          <span class="zh">把“学会”变成“成为”。把知识与生活的意义连接起来。</span>
-          <span class="en">Turn “knowing” into “becoming”—connect knowledge to meaning in real life.</span>
-        </p>
-      </article>
+    <!-- 三大专题入口 -->
+    <section class="card">
+      <h2 class="stack">
+        <span class="zh">三大专题</span>
+        <span class="en">Main Tracks</span>
+      </h2>
 
-      <article class="card">
-        <h2><span class="zh">能力 × 情绪整合</span><span class="en">Ability × Emotional Integration</span></h2>
-        <p>
-          <span class="zh">优秀也可以不焦虑。用清晰的工具，练习情绪调节与自我整合。</span>
-          <span class="en">You can be high-achieving without high anxiety—practice regulation and self-integration with clear tools.</span>
-        </p>
-      </article>
+      <div class="grid topics">
 
-      <article class="card">
-        <h2><span class="zh">共创</span><span class="en">Co-creation</span></h2>
-        <p>
-          <span class="zh">让孩子与学生参与建设：把真实经验变成可用资源。</span>
-          <span class="en">Invite students and children to build with us—turn lived experience into usable resources.</span>
-        </p>
-      </article>
-    </section>
+        <!-- SEL -->
+        <article class="card topic-card section-social">
+          <h3 class="topic-title">
+            <a href="topic-sel.html">
+              <span class="zh">SEL × 学习者能量加油站</span>
+              <span class="en">SEL × Learner Energy Station</span>
+            </a>
+          </h3>
+          <p class="muted stack">
+            <span class="zh">共读、节日礼仪、SEL工具箱</span>
+            <span class="en">Book club, rituals, toolkit</span>
+          </p>
+        </article>
 
-    <section class="card featured">
-      <div class="featured-head">
-        <h2><span class="zh">最新专题</span><span class="en">Featured</span></h2>
-        <span class="badge"><span class="zh">一页就能用</span><span class="en">Ready to use</span></span>
-      </div>
+        <!-- Physics -->
+        <article class="card topic-card section-physics">
+          <h3 class="topic-title">
+            <a href="topic-physics.html">
+              <span class="zh">物理</span>
+              <span class="en">Physics</span>
+            </a>
+          </h3>
+          <p class="muted stack">
+            <span class="zh">直觉 × 图像 × 推导</span>
+            <span class="en">Intuition × Diagrams × Derivations</span>
+          </p>
+        </article>
 
-      <p class="muted">
-        <span class="zh">春节聚餐：祝福话与待人接物——祝福句式工具、情境应对卡片、亲子对话三问。</span>
-        <span class="en">Spring Festival meals: blessings, manners, and coping cards—templates, responses, and 3 family prompts.</span>
-      </p>
+        <!-- Biology -->
+        <article class="card topic-card section-biology">
+          <h3 class="topic-title">
+            <a href="topic-biology.html">
+              <span class="zh">生物</span>
+              <span class="en">Biology</span>
+            </a>
+          </h3>
+          <p class="muted stack">
+            <span class="zh">机制 × 证据 × 表达</span>
+            <span class="en">Mechanism × Evidence × Expression</span>
+          </p>
+        </article>
 
-      <div class="cta-row">
-        <a class="btn primary" href="spring.html">
-          <span class="zh">打开专题页</span><span class="en">Open the page</span>
-        </a>
-        <a class="btn ghost" href="topics.html">
-          <span class="zh">查看全部专题</span><span class="en">View all topics</span>
-        </a>
       </div>
     </section>
 
     <footer class="footer">
       <div class="footer-inner">
-        <div class="muted">
-          <span class="zh">用结构性的温柔，陪伴年轻人建立属于自己的成长结构。</span>
-          <span class="en">With gentle structure, we support young people in building their own growth framework.</span>
-        </div>
-        <div class="muted small">
-          © <span id="year"></span> EduSynergy
-        </div>
+        <div class="muted small">© <span id="year"></span> EduSynergy</div>
       </div>
     </footer>
+
   </main>
 
   <script src="app.js"></script>
