Revise content and update meta description in index.html
Updated the description meta tag and modified various content for clarity and engagement. Adjusted section headers and added mentor notes for better context.

--- a/index.html
+++ b/index.html
@@ -4,16 +4,11 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>心能教育 EduSynergy</title>
-  <meta name="description" content="心能教育：连接能力、情绪与现实的长期成长框架。" />
+  <meta name="description" content="探索世界的规律，看见内在的力量。EduSynergy：SEL × 学习者能量加油站、物理、生物。" />
   <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body data-mode="bi">
-
-  <!-- 更新确认标记：看到它=你确实替换成功 -->
-  <div style="position:fixed;top:10px;left:10px;z-index:99999;background:#ffefc2;padding:8px 10px;border-radius:10px;font-weight:700">
-    ✅ INDEX STRUCTURE v2
-  </div>
 
   <header class="topbar">
     <div class="container topbar-inner">
@@ -25,9 +20,7 @@
       </a>
 
       <nav class="top-actions">
-        <a class="navlink" href="topics.html">
-          <span class="zh">专题</span><span class="en">Topics</span>
-        </a>
+        <a class="navlink" href="topics.html"><span class="zh">专题</span><span class="en">Topics</span></a>
         <button class="chip" id="modeToggle" type="button" aria-label="Bilingual toggle">
           <span class="zh">中英</span><span class="en">BI</span>
         </button>
@@ -37,41 +30,40 @@
 
   <main class="container">
 
-    <!-- 顶部：品牌理念 -->
+    <!-- 顶部：品牌理念 + Slogan A -->
     <section class="hero">
       <div class="hero-card section-network">
         <h1 class="stack">
-          <span class="zh">心能教育</span>
-          <span class="en">EduSynergy</span>
+          <span class="zh">探索世界的规律，看见内在的力量。</span>
+          <span class="en">Discover the laws of the universe—and the power within.</span>
         </h1>
 
         <p class="lead stack">
-          <span class="zh">
-            心能教育搭建能力、情绪与现实连接的长期成长框架，
-            推动认知与自我整合升级，让学习成为自我形成的过程。
-          </span>
-          <span class="en">
-            EduSynergy builds a long-term developmental framework connecting capability,
-            emotion, and reality—supporting cognitive and self-integration, so learning
-            becomes a process of self-formation.
-          </span>
+          <span class="zh">在 EduSynergy，我们不只解构物理与生物，更陪伴你踏上自我形成的学习之旅。</span>
+          <span class="en">At EduSynergy, we don’t just decode physics and biology—we guide you on a journey of self-formation through learning.</span>
         </p>
 
         <div class="pill-row">
-          <span class="pill"><span class="zh">能力</span><span class="en">Capability</span></span>
-          <span class="pill"><span class="zh">情绪</span><span class="en">Emotion</span></span>
-          <span class="pill"><span class="zh">现实</span><span class="en">Reality</span></span>
+          <span class="pill"><span class="zh">规律</span><span class="en">Laws</span></span>
+          <span class="pill"><span class="zh">内在力量</span><span class="en">Inner power</span></span>
+          <span class="pill"><span class="zh">自我形成</span><span class="en">Self-formation</span></span>
+        </div>
+
+        <div class="note">
+          <p class="stack">
+            <span class="zh">心能教育搭建能力、情绪与现实连接的长期成长框架，推动认知与自我整合升级，让学习成为自我形成的过程。</span>
+            <span class="en">EduSynergy builds a long-term framework connecting capability, emotion, and reality—supporting cognitive and self-integration, so learning becomes a process of self-formation.</span>
+          </p>
         </div>
 
         <div class="cta-row">
-          <a class="btn" href="topics.html">
-            <span class="zh">进入专题</span><span class="en">Explore Topics</span>
-          </a>
+          <a class="btn primary" href="topics.html"><span class="zh">进入专题</span><span class="en">Explore Topics</span></a>
+          <a class="btn" href="topic-sel.html"><span class="zh">进入 SEL</span><span class="en">Enter SEL</span></a>
         </div>
       </div>
     </section>
 
-    <!-- 三大专题入口：并排 -->
+    <!-- 三大专题：并排入口 -->
     <section class="card">
       <h2 class="stack">
         <span class="zh">三大专题</span>
@@ -80,7 +72,7 @@
 
       <div class="grid topics">
 
-        <!-- SEL -->
+        <!-- 1) SEL -->
         <article class="card topic-card section-social">
           <div class="topic-meta">
             <span class="topic-tag"><span class="zh">专题</span><span class="en">Track</span></span>
@@ -94,10 +86,16 @@
             </a>
           </h3>
 
+          <p class="muted stack">
+            <span class="zh">在追求卓越的路上，你的情绪同样需要被看见。</span>
+            <span class="en">Because your emotional well-being is the engine of your academic growth.</span>
+          </p>
+
           <ul class="list">
-            <li class="stack"><span class="zh">共读（8篇）</span><span class="en">Book club (8)</span></li>
+            <li class="stack"><span class="zh">共读（8篇）：Half Lesson → Lesson 1–7</span><span class="en">Book club (8): Half Lesson → Lessons 1–7</span></li>
             <li class="stack"><span class="zh">节日礼仪与祝福（小加餐）</span><span class="en">Festival mini add-ons</span></li>
-            <li class="stack"><span class="zh">SEL工具箱（持续更新）</span><span class="en">Growing toolkit</span></li>
+            <li class="stack"><span class="zh">工具箱：身体预算｜共同调节｜预测与重构</span><span class="en">Toolkit: body budget｜co-regulation｜prediction & reframing</span></li>
+            <li class="stack"><span class="zh">（可拓展）留学生心理韧性 Resilience</span><span class="en">(Expandable) Resilience for study abroad</span></li>
           </ul>
 
           <div class="cta-row">
@@ -105,7 +103,7 @@
           </div>
         </article>
 
-        <!-- Physics -->
+        <!-- 2) Physics -->
         <article class="card topic-card section-physics">
           <div class="topic-meta">
             <span class="topic-tag"><span class="zh">专题</span><span class="en">Track</span></span>
@@ -119,10 +117,22 @@
             </a>
           </h3>
 
+          <p class="muted stack">
+            <span class="zh">像物理学家一样思考：用简洁的定律，解码复杂的世界。</span>
+            <span class="en">Think like a physicist: decode a complex world with elegant principles.</span>
+          </p>
+
+          <div class="note">
+            <p class="stack">
+              <span class="zh">导师寄语（Alvin）：我不想只教你怎么在 SAT 或 AP 拿高分。我更想帮你闭上眼睛，也能在脑海里看见力的流转、能量的守恒。</span>
+              <span class="en">Mentor note (Alvin): I don’t just want you to ace the SAT or AP. I want you to close your eyes and see forces moving—and energy staying conserved.</span>
+            </p>
+          </div>
+
           <ul class="list">
-            <li class="stack"><span class="zh">力学（运动、力、能量、动量）</span><span class="en">Mechanics</span></li>
-            <li class="stack"><span class="zh">电磁（场、势、回路、感应）</span><span class="en">E&M</span></li>
-            <li class="stack"><span class="zh">波与光学、热学、现代物理</span><span class="en">Waves/Optics, Thermo, Modern</span></li>
+            <li class="stack"><span class="zh">力学：运动｜力｜能量｜动量</span><span class="en">Mechanics: motion｜forces｜energy｜momentum</span></li>
+            <li class="stack"><span class="zh">电磁：场｜势｜回路｜感应</span><span class="en">E&M: fields｜potential｜circuits｜induction</span></li>
+            <li class="stack"><span class="zh">波与光学｜热学｜现代物理</span><span class="en">Waves/Optics｜Thermo｜Modern</span></li>
           </ul>
 
           <div class="cta-row">
@@ -130,7 +140,7 @@
           </div>
         </article>
 
-        <!-- Biology -->
+        <!-- 3) Biology -->
         <article class="card topic-card section-biology">
           <div class="topic-meta">
             <span class="topic-tag"><span class="zh">专题</span><span class="en">Track</span></span>
@@ -144,10 +154,22 @@
             </a>
           </h3>
 
+          <p class="muted stack">
+            <span class="zh">生命是一场精密的奇迹：从细胞微观到生态宏观的探秘。</span>
+            <span class="en">Life is a precise miracle—from cellular mechanisms to ecological wonder.</span>
+          </p>
+
+          <div class="note">
+            <p class="stack">
+              <span class="zh">导师寄语（Andrew）：生物不是死记硬背的术语，而是大自然用几十亿年写下的代码。我们一起学会读懂它。</span>
+              <span class="en">Mentor note (Andrew): Biology isn’t memorizing terms—it’s learning to read the code nature wrote over billions of years. Let’s decode it together.</span>
+            </p>
+          </div>
+
           <ul class="list">
-            <li class="stack"><span class="zh">细胞与能量（结构、运输、呼吸/光合）</span><span class="en">Cell & Energy</span></li>
-            <li class="stack"><span class="zh">遗传（孟德尔、分子遗传、生物技术）</span><span class="en">Genetics</span></li>
-            <li class="stack"><span class="zh">进化与生态、人体系统（可选）</span><span class="en">Evolution & Ecology</span></li>
+            <li class="stack"><span class="zh">细胞与能量：结构｜运输｜呼吸/光合</span><span class="en">Cell & energy: structure｜transport｜respiration/photosynthesis</span></li>
+            <li class="stack"><span class="zh">遗传：孟德尔｜分子遗传｜生物技术</span><span class="en">Genetics: Mendel｜molecular｜biotech</span></li>
+            <li class="stack"><span class="zh">进化与生态｜人体系统（可选）</span><span class="en">Evolution & ecology｜human systems (optional)</span></li>
           </ul>
 
           <div class="cta-row">
