Refactor topics.html structure and content

--- a/topics.html
+++ b/topics.html
@@ -3,127 +3,83 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>专题 | Topics | 心能教育 EduSynergy</title>
-  <meta name="description" content="EduSynergy 专题：SEL × 学习者能量加油站、物理、生物。" />
+  <title>专题 | EduSynergy</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body data-mode="bi">
-  <header class="topbar">
-    <div class="container topbar-inner">
-      <a class="brand" href="index.html" aria-label="EduSynergy Home">
-        <span class="brand-mark">心能</span>
-        <span class="brand-name">心能教育</span>
-        <span class="brand-sep">·</span>
-        <span class="brand-name-en">EduSynergy</span>
-      </a>
 
-      <nav class="top-actions">
-        <a class="navlink" href="topics.html"><span class="zh">专题</span><span class="en">Topics</span></a>
-        <button class="chip" id="modeToggle" type="button" aria-label="Bilingual toggle">
-          <span class="zh">中英</span><span class="en">BI</span>
-        </button>
-      </nav>
-    </div>
-  </header>
+<header class="topbar">
+  <div class="container topbar-inner">
+    <a class="brand" href="index.html">
+      <span class="brand-mark">心能</span>
+      <span class="brand-name">心能教育</span>
+      <span class="brand-sep">·</span>
+      <span class="brand-name-en">EduSynergy</span>
+    </a>
+  </div>
+</header>
 
-  <main class="container">
-    <section class="hero compact">
-      <div class="hero-card section-reading">
-        <h1 class="stack">
-          <span class="zh">专题</span>
-          <span class="en">Topics</span>
-        </h1>
-        <p class="lead stack">
-          <span class="zh">三大主线：SEL × 学习者能量加油站、物理、生物。其余内容作为子主题归入 SEL。</span>
-          <span class="en">Three main tracks: SEL × Learner Energy Station, Physics, Biology. Other content lives as SEL subtopics.</span>
-        </p>
-      </div>
-    </section>
+<main class="container">
 
-    <section class="card">
-      <div class="grid topics">
-        <!-- SEL -->
-        <article class="card topic-card section-social">
-          <div class="topic-meta">
-            <span class="topic-tag"><span class="zh">主专题</span><span class="en">Main</span></span>
-            <span class="topic-tag"><span class="zh">SEL</span><span class="en">SEL</span></span>
-          </div>
+<section class="hero">
+  <div class="hero-card section-network">
+    <h1 class="stack">
+      <span class="zh">三大专题</span>
+      <span class="en">Main Tracks</span>
+    </h1>
+    <p class="lead stack">
+      <span class="zh">SEL、物理与生物：从内在能量到自然规律的整体学习路径。</span>
+      <span class="en">SEL, Physics, and Biology: a unified path from inner energy to natural laws.</span>
+    </p>
+  </div>
+</section>
 
-          <h2 class="topic-title">
-            <a href="topic-sel.html">
-              <span class="zh">SEL × 学习者能量加油站</span>
-              <span class="en">SEL × Learner Energy Station</span>
-            </a>
-          </h2>
+<section class="card">
+  <div class="grid topics">
 
-          <p class="muted stack">
-            <span class="zh">共读（8篇）＋节日礼仪加餐＋SEL工具箱（持续更新）。</span>
-            <span class="en">Book club (8) + festival add-ons + an evolving SEL toolkit.</span>
-          </p>
+    <article class="card topic-card section-social">
+      <h3 class="topic-title">
+        <a href="topic-sel.html">
+          <span class="zh">SEL × 学习者能量加油站</span>
+          <span class="en">SEL × Learner Energy Station</span>
+        </a>
+      </h3>
+      <p class="muted stack">
+        <span class="zh">情绪与学习的整合路径</span>
+        <span class="en">Emotion–learning integration</span>
+      </p>
+    </article>
 
-          <div class="cta-row">
-            <a class="btn primary" href="topic-sel.html"><span class="zh">进入</span><span class="en">Enter</span></a>
-          </div>
-        </article>
+    <article class="card topic-card section-physics">
+      <h3 class="topic-title">
+        <a href="topic-physics.html">
+          <span class="zh">物理：直觉 × 图像 × 推导</span>
+          <span class="en">Physics</span>
+        </a>
+      </h3>
+      <p class="muted stack">
+        <span class="zh">自然规律的结构化理解</span>
+        <span class="en">Structured understanding of laws</span>
+      </p>
+    </article>
 
-        <!-- Physics -->
-        <article class="card topic-card section-physics">
-          <div class="topic-meta">
-            <span class="topic-tag"><span class="zh">主专题</span><span class="en">Main</span></span>
-            <span class="topic-tag"><span class="zh">物理</span><span class="en">Physics</span></span>
-          </div>
+    <article class="card topic-card section-biology">
+      <h3 class="topic-title">
+        <a href="topic-biology.html">
+          <span class="zh">生物：机制 × 证据 × 表达</span>
+          <span class="en">Biology</span>
+        </a>
+      </h3>
+      <p class="muted stack">
+        <span class="zh">生命系统的层级结构</span>
+        <span class="en">Hierarchies of life systems</span>
+      </p>
+    </article>
 
-          <h2 class="topic-title">
-            <a href="topic-physics.html">
-              <span class="zh">物理：直觉 × 图像 × 推导</span>
-              <span class="en">Physics: Intuition × Diagrams × Derivations</span>
-            </a>
-          </h2>
+  </div>
+</section>
 
-          <p class="muted stack">
-            <span class="zh">依照主流初高中大纲组织子主题与多期内容。</span>
-            <span class="en">Subtopics organized around common middle/high school curricula.</span>
-          </p>
-
-          <div class="cta-row">
-            <a class="btn primary" href="topic-physics.html"><span class="zh">进入</span><span class="en">Enter</span></a>
-          </div>
-        </article>
-
-        <!-- Biology -->
-        <article class="card topic-card section-biology">
-          <div class="topic-meta">
-            <span class="topic-tag"><span class="zh">主专题</span><span class="en">Main</span></span>
-            <span class="topic-tag"><span class="zh">生物</span><span class="en">Biology</span></span>
-          </div>
-
-          <h2 class="topic-title">
-            <a href="topic-biology.html">
-              <span class="zh">生物：机制 × 证据 × 表达</span>
-              <span class="en">Biology: Mechanism × Evidence × Expression</span>
-            </a>
-          </h2>
-
-          <p class="muted stack">
-            <span class="zh">依照主流初高中大纲组织子主题与多期内容。</span>
-            <span class="en">Subtopics organized around common middle/high school curricula.</span>
-          </p>
-
-          <div class="cta-row">
-            <a class="btn primary" href="topic-biology.html"><span class="zh">进入</span><span class="en">Enter</span></a>
-          </div>
-        </article>
-      </div>
-    </section>
-
-    <footer class="footer">
-      <div class="footer-inner">
-        <div class="muted small">© <span id="year"></span> EduSynergy</div>
-      </div>
-    </footer>
-  </main>
-
-  <script src="app.js"></script>
+</main>
 </body>
 </html>
