Update list items in index.html

--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
           </p>
 
           <ul class="list">
-            <li class="stack"><span class="zh">共读（8篇）：Half Lesson → Lesson 1–7</span><span class="en">Book club (8): Half Lesson → Lessons 1–7</span></li>
+            <li class="stack"><span class="zh">共读：1关于大脑的七节半课</span><span class="en">Book club : Seven and Half Lessons About The Brain</span></li>
             <li class="stack"><span class="zh">节日礼仪与祝福（小加餐）</span><span class="en">Festival mini add-ons</span></li>
             <li class="stack"><span class="zh">工具箱：身体预算｜共同调节｜预测与重构</span><span class="en">Toolkit: body budget｜co-regulation｜prediction & reframing</span></li>
-            <li class="stack"><span class="zh">心理韧性 Resilience</span><span class="en">(Expandable) Resilience for study abroad</span></li>
+            <li class="stack"><span class="zh">心理韧性 Resilience</span><span class="en">(Expandable) Resilience</span></li>
           </ul>
 
           <div class="cta-row">
