Update title and add meta description in HTML

--- a/topic-sel.html
+++ b/topic-sel.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>SEL | EduSynergy</title>
+  <title>SEL × 学习者能量加油站 | EduSynergy</title>
+  <meta name="description" content="SEL × 学习者能量加油站：共读 Your Brain 系列、春节礼仪与祝福、SEL工具箱（持续更新）。" />
   <link rel="stylesheet" href="styles.css" />
 </head>
 
@@ -11,7 +12,7 @@
 
 <header class="topbar">
   <div class="container topbar-inner">
-    <a class="brand" href="index.html">
+    <a class="brand" href="index.html" aria-label="EduSynergy Home">
       <span class="brand-mark">心能</span>
       <span class="brand-name">心能教育</span>
       <span class="brand-sep">·</span>
@@ -22,63 +23,240 @@
 
 <main class="container">
 
-<section class="hero">
-  <div class="hero-card section-social">
-    <h1 class="stack">
-      <span class="zh">SEL × 学习者能量加油站</span>
-      <span class="en">Learner Energy Station</span>
-    </h1>
-    <p class="lead stack">
-      <span class="zh">在追求卓越的路上，你的情绪同样需要被看见。</span>
-      <span class="en">Your emotional well-being powers learning.</span>
+  <!-- HERO -->
+  <section class="hero">
+    <div class="hero-card section-social">
+      <h1 class="stack">
+        <span class="zh">SEL × 学习者能量加油站</span>
+        <span class="en">SEL × Learner Energy Station</span>
+      </h1>
+
+      <p class="lead stack">
+        <span class="zh">在追求卓越的路上，你的情绪同样需要被看见。</span>
+        <span class="en">Because your emotional well-being is the engine of your academic growth.</span>
+      </p>
+
+      <div class="pill-row">
+        <span class="pill"><span class="zh">身体预算</span><span class="en">Body budget</span></span>
+        <span class="pill"><span class="zh">共同调节</span><span class="en">Co-regulation</span></span>
+        <span class="pill"><span class="zh">预测与重构</span><span class="en">Prediction & reframing</span></span>
+      </div>
+    </div>
+  </section>
+
+  <!-- 共读专区 -->
+  <section class="card">
+    <h2 class="stack">
+      <span class="zh">共读专区：The 7½ Lessons About the Brain</span>
+      <span class="en">Co-reading: The 7½ Lessons About the Brain</span>
+    </h2>
+
+    <p class="muted stack">
+      <span class="zh">按顺序阅读：Half Lesson → Lesson 1–7。每篇都有中英对照，适合学习语言与思维方式。</span>
+      <span class="en">Read in order: Half Lesson → Lessons 1–7. Bilingual for language + thinking.</span>
     </p>
-  </div>
-</section>
 
-<section class="card">
-  <h2 class="stack">
-    <span class="zh">子专题</span>
-    <span class="en">Subtopics</span>
-  </h2>
+    <div class="grid topics">
 
-  <div class="grid topics">
+      <article class="topic-card section-social">
+        <h3 class="topic-title">
+          <a href="topic-coreading.html">
+            <span class="zh">共读目录（总览）</span>
+            <span class="en">Full Directory</span>
+          </a>
+        </h3>
+        <p class="muted stack">
+          <span class="zh">如果你更想先看全书结构，从这里进入。</span>
+          <span class="en">Prefer the big picture first? Start here.</span>
+        </p>
+      </article>
 
-    <article class="card topic-card section-social">
-      <h3 class="topic-title">
-        <span class="zh">共读：Your Brain 系列</span>
-        <span class="en">Brain Reading Series</span>
-      </h3>
-      <p class="muted stack">
-        <span class="zh">情绪、预测与身体预算</span>
-        <span class="en">Emotion & prediction</span>
-      </p>
-    </article>
+      <article class="topic-card section-social">
+        <h3 class="topic-title">
+          <a href="reading-00-half.html">
+            <span class="zh">Half Lesson：Your Brain Is Not for Thinking</span>
+            <span class="en">Half Lesson: Your Brain Is Not for Thinking</span>
+          </a>
+        </h3>
+        <p class="muted stack">
+          <span class="zh">把“学习”重新理解为：预测、调节与意义建构。</span>
+          <span class="en">Reframing learning as prediction, regulation, and meaning-making.</span>
+        </p>
+      </article>
 
-    <article class="card topic-card section-social">
-      <h3 class="topic-title">
-        <span class="zh">节日礼仪与祝福</span>
-        <span class="en">Rituals & Social Language</span>
-      </h3>
-      <p class="muted stack">
-        <span class="zh">文化情境中的 SEL 练习</span>
-        <span class="en">SEL in culture</span>
-      </p>
-    </article>
+      <article class="topic-card section-social">
+        <h3 class="topic-title">
+          <a href="reading-01-onebrain.html">
+            <span class="zh">Lesson 1：You Have One Brain (Not Three)</span>
+            <span class="en">Lesson 1: You Have One Brain (Not Three)</span>
+          </a>
+        </h3>
+        <p class="muted stack">
+          <span class="zh">打破“三脑”误解，建立统一视角。</span>
+          <span class="en">A unified view of the brain.</span>
+        </p>
+      </article>
 
-    <article class="card topic-card section-social">
-      <h3 class="topic-title">
-        <span class="zh">SEL 工具箱</span>
-        <span class="en">SEL Toolkit</span>
-      </h3>
-      <p class="muted stack">
-        <span class="zh">调节、重构与觉察</span>
-        <span class="en">Regulation & reframing</span>
-      </p>
-    </article>
+      <article class="topic-card section-social">
+        <h3 class="topic-title">
+          <a href="reading-02-network.html">
+            <span class="zh">Lesson 2：Your Brain Is a Network</span>
+            <span class="en">Lesson 2: Your Brain Is a Network</span>
+          </a>
+        </h3>
+        <p class="muted stack">
+          <span class="zh">网络、路径与可塑性：你如何被“练出来”。</span>
+          <span class="en">Networks, pathways, and plasticity.</span>
+        </p>
+      </article>
 
-  </div>
-</section>
+      <article class="topic-card section-social">
+        <h3 class="topic-title">
+          <a href="reading-03-wiring.html">
+            <span class="zh">Lesson 3：Little Brains Wire Themselves to Their World</span>
+            <span class="en">Lesson 3: Little Brains Wire to Their World</span>
+          </a>
+        </h3>
+        <p class="muted stack">
+          <span class="zh">环境、经验与发展：孩子如何被世界塑形。</span>
+          <span class="en">Development through experience.</span>
+        </p>
+      </article>
+
+      <article class="topic-card section-social">
+        <h3 class="topic-title">
+          <a href="reading-04-predicts.html">
+            <span class="zh">Lesson 4：Your Brain Predicts (Almost) Everything You Do</span>
+            <span class="en">Lesson 4: Your Brain Predicts (Almost) Everything</span>
+          </a>
+        </h3>
+        <p class="muted stack">
+          <span class="zh">预测加工：为什么“理解”比“记住”更重要。</span>
+          <span class="en">Prediction as the brain’s default mode.</span>
+        </p>
+      </article>
+
+      <article class="topic-card section-social">
+        <h3 class="topic-title">
+          <a href="reading-05-withothers.html">
+            <span class="zh">Lesson 5：Your Brain Secretly Works with Other Brains</span>
+            <span class="en">Lesson 5: Brains Work with Other Brains</span>
+          </a>
+        </h3>
+        <p class="muted stack">
+          <span class="zh">共同调节与关系：学习不是孤独工程。</span>
+          <span class="en">Co-regulation and social learning.</span>
+        </p>
+      </article>
+
+      <article class="topic-card section-social">
+        <h3 class="topic-title">
+          <a href="reading-06-minds.html">
+            <span class="zh">Lesson 6：Brains Make More than One Kind of Mind</span>
+            <span class="en">Lesson 6: More than One Kind of Mind</span>
+          </a>
+        </h3>
+        <p class="muted stack">
+          <span class="zh">多种“心智模式”：任务、情境与自我切换。</span>
+          <span class="en">Multiple modes of mind.</span>
+        </p>
+      </article>
+
+      <article class="topic-card section-social">
+        <h3 class="topic-title">
+          <a href="reading-07-reality.html">
+            <span class="zh">Lesson 7：Our Brains Can Create Reality</span>
+            <span class="en">Lesson 7: Our Brains Create Reality</span>
+          </a>
+        </h3>
+        <p class="muted stack">
+          <span class="zh">意义、解释与现实：我们如何“活在自己的版本里”。</span>
+          <span class="en">Meaning, interpretation, and lived reality.</span>
+        </p>
+      </article>
+
+    </div>
+  </section>
+
+  <!-- 春节加餐 -->
+  <section class="card">
+    <h2 class="stack">
+      <span class="zh">春节小加餐：礼仪与祝福</span>
+      <span class="en">Mini Add-on: Spring Festival Rituals</span>
+    </h2>
+
+    <p class="muted stack">
+      <span class="zh">把“说祝福、待人接物”当作 SEL 的真实练习：关系、文化、语言与情绪调节。</span>
+      <span class="en">Turn greetings and etiquette into SEL practice: relationship, culture, language, and regulation.</span>
+    </p>
+
+    <div class="grid topics">
+      <article class="topic-card section-social">
+        <h3 class="topic-title">
+          <a href="spring.html">
+            <span class="zh">春节祝福与聚餐礼节</span>
+            <span class="en">Blessings & Table Etiquette</span>
+          </a>
+        </h3>
+        <p class="muted stack">
+          <span class="zh">练：得体表达、共情、场景判断、双语切换。</span>
+          <span class="en">Practice: appropriateness, empathy, situational judgment, bilingual switching.</span>
+        </p>
+      </article>
+    </div>
+  </section>
+
+  <!-- 工具箱占位 -->
+  <section class="card">
+    <h2 class="stack">
+      <span class="zh">SEL 工具箱（持续更新）</span>
+      <span class="en">SEL Toolkit (Growing)</span>
+    </h2>
+
+    <div class="grid topics">
+      <article class="topic-card section-social">
+        <h3 class="topic-title stack">
+          <span class="zh">（待写）身体预算自评 + 90秒重置</span>
+          <span class="en">(Draft) Body Budget Check + 90s Reset</span>
+        </h3>
+        <p class="muted stack">
+          <span class="zh">写好后：链接到 sel-toolkit-bodybudget.html</span>
+          <span class="en">Later: link to sel-toolkit-bodybudget.html</span>
+        </p>
+      </article>
+
+      <article class="topic-card section-social">
+        <h3 class="topic-title stack">
+          <span class="zh">（待写）三种框架重写同一件事</span>
+          <span class="en">(Draft) Reframe in 3 Frames</span>
+        </h3>
+        <p class="muted stack">
+          <span class="zh">写好后：链接到 sel-toolkit-reframing.html</span>
+          <span class="en">Later: link to sel-toolkit-reframing.html</span>
+        </p>
+      </article>
+
+      <article class="topic-card section-social">
+        <h3 class="topic-title stack">
+          <span class="zh">（待写）换通道学习：看→说→写→教</span>
+          <span class="en">(Draft) Switch Channels: See→Say→Write→Teach</span>
+        </h3>
+        <p class="muted stack">
+          <span class="zh">写好后：链接到 sel-toolkit-routing.html</span>
+          <span class="en">Later: link to sel-toolkit-routing.html</span>
+        </p>
+      </article>
+    </div>
+  </section>
+
+  <footer class="footer">
+    <div class="footer-inner">
+      <div class="muted small">© <span id="year"></span> EduSynergy</div>
+    </div>
+  </footer>
 
 </main>
+
+<script src="app.js"></script>
 </body>
 </html>
